# VrmlScriptCompiler

./: .gitignore  CMakeLists.txt  VrmlScriptCompiler.sln  calctest
CppConsoleTestBench/: CppConsoleTestBench.cpp  CppConsoleTestBench.vcxproj  CppConsoleTestBench.vcxproj.filters  TestScript.h
StackMachine/: CMakeLists.txt  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  add_instruction.cpp  add_instruction.h  call_instruction.h  instruction.h  int_operand.h  load_instruction.cpp  load_instruction.h  main.cpp  operand.h  overload.h  program.h  stack.h  stack_frame.h  stack_machine.cpp  stack_machine.h  stack_machine.hpp  value_operand.h  vrml_variable.cpp  vrml_variable.h  vrml_variant_operand.cpp  vrml_variant_operand.h
VrmlScriptCompiler/: AssignVisitor.cpp  AssignVisitor.h  BuildExpressionVisitor.cpp  ClassDiagram.cd  EvaluateVisitor.cpp  EvaluateVisitor.h  GenerateCppVisitor.cpp  GenerateCppVisitor.h  GenerteCppVisitor.cpp  PrintASTVisitor.cpp  PrintASTVisitor.hh  ScopeAnalysis.cpp  ScopeAnalysis.h  ScriptBase.h  StackMachineVisitor.cpp  StackMachineVisitor.h  VrmlScanner.h  VrmlScriptCompiler.cpp  VrmlScriptCompiler.vcxproj  VrmlScriptCompiler.vcxproj.filters  VrmlVariant.h  calctest  driver.cc  driver.hh  nodes.cpp  nodes.hh  parser.output  parser.yy  scanner.ll
